Fixed the svg animation when on mobile

--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -462,7 +462,9 @@ nav ul li:first-child{
 
 
 @media screen and (max-width: 850px) {
-
+    .section-1 svg{
+        transform: scale(.3) !important;
+    }
     #logo img{
         width: 2rem;
         height: 2rem;
